<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="classroom"
            type="com.mua.mobileattendance.viewmodel.ClassroomViewModel" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="20dp"
        tools:context=".activity.ClassroomActivity">


        <TextView
            android:id="@+id/tv_role"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@{classroom.actingAs}"
            android:textSize="22sp"
            android:textStyle="bold" />


        <TableLayout
            android:id="@+id/tl_details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_role"
            android:orientation="vertical">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/classroom_id"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@{classroom.classroomDto.classroomId.toString()}"
                    android:textSize="18sp" />


            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/classroom_name"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@{classroom.classroomDto.name}"
                    android:textSize="18sp" />


            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/classroom_details"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@{classroom.classroomDto.details}"
                    android:textSize="18sp"
                    app:visibility="@{!classroom.classroomEditing}" />

                <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:autofillHints="This classroom is where"
                    android:inputType="text"
                    android:text="@={classroom.classroomDto.details}"
                    android:textSize="18sp"
                    app:visibility="@{classroom.classroomEditing}" />


            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/next_session_time"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@{classroom.classroomDto.nextSessionTime.toGMTString()}"
                    android:textSize="18sp"
                    app:visibility="@{!classroom.classroomEditing}" />

                <Button
                    android:id="@+id/btn_date_pick"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/pick_next_session_time"
                    app:visibility="@{classroom.classroomEditing}" />

            </TableRow>

        </TableLayout>


        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
            android:id="@+id/srl_parent"
            android:layout_below="@+id/tl_details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp">



            <androidx.core.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="0dp"
                android:layout_marginBottom="64dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        visibility="@{classroom.isMember}"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:paddingTop="10dp"
                        android:text="@string/sessions"
                        android:textSize="26sp"
                        android:textStyle="bold" />


                    <androidx.recyclerview.widget.RecyclerView
                        visibility="@{classroom.isMember}"
                        android:id="@+id/rv_sessions"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:padding="2dp" />


                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:paddingTop="10dp"
                        android:text="@string/user_and_roles"
                        android:textSize="26sp"
                        android:textStyle="bold" />



                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rv_user_roles"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:padding="2dp" />

                </LinearLayout>


            </androidx.core.widget.NestedScrollView>


        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>



        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_gravity="end|bottom"
            android:layout_margin="10dp"
            android:orientation="vertical">


            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/fab_join_or_add"
                animationDim="@{classroom.fabExpanded}"
                visibility="@{classroom.fabExpanded}"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:contentDescription="@string/join_or_add_member"
                android:src="@drawable/enter"
                android:tooltipText="@string/join_or_add_member" />


            <com.google.android.material.floatingactionbutton.FloatingActionButton

                android:id="@+id/fab_manage_classroom"
                animationDim="@{classroom.fabExpanded}"
                visibility="@{classroom.fabExpanded}"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:contentDescription="@string/manage_member"
                android:enabled="@{classroom.superAuthorizedMember}"
                android:src="@drawable/manage"
                android:tooltipText="@string/manage_member" />


            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/fab_add_classroom"
                animationDim="@{classroom.fabExpanded}"
                visibility="@{classroom.fabExpanded}"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:contentDescription="@string/add_new_session"
                android:enabled="@{classroom.superAuthorizedMember}"
                android:src="@drawable/plus"
                android:tooltipText="@string/add_new_session" />


            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/fab_edit_classroom"
                animationDim="@{classroom.fabExpanded}"
                visibility="@{classroom.fabExpanded}"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:contentDescription="@string/edit_classroom"
                android:enabled="@{classroom.superAuthorizedMember}"
                android:src="@drawable/edit"
                android:tooltipText="@string/edit_classroom" />


            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/fab_expand"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:contentDescription="@string/expand"
                android:src="@drawable/expand"
                android:tooltipText="@string/expand" />


        </LinearLayout>


    </RelativeLayout>
</layout>
